Added registration open counter for each category

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
       </div>
   </div>
   <div class="col-lg-9">
-    <label class="mt-20 f-18 clr-light-gray">4 Courses open for registration</label>
+    <label class="mt-20 f-18 clr-light-gray">{{registrationCount}} Courses open for registration</label>
     <div class="course-wrapper">
       <div class="row">
         <div class="col-lg-4" *ngFor="let course of filteredCourses">
